<resources>
    <string name="app_name">Motivv</string>

    <string name="sign_in_text">Sign in to your account</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in">Sign in</string>
    <string name="new_to_motivv">New to Motivv ?</string>
    <string name="register_here">Register here</string>

    <string name="register_text">Let’s get to know you better!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_text">~ Your password must be at least 8 characters long and include a mix of letters, numbers, and special characters</string>
    <string name="join_motivv">Join Motivv</string>
    <string name="join_using_google">Join using google</string>

</resources>